tests/negative/neg_own_anon_reassign.safe
-- Test: neg_own_anon_reassign
-- Description: Reassigning an anonymous access local after declaration.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.3.p100a:ba849e66
-- Expected: REJECT anonymous_access_reassign

package anonymous_reassign_test

   type data is record
      value : integer;

   type data_ptr is access data;

   function reassign_borrow
      owner : data_ptr = new ((value = 1) as data);
      other : data_ptr = new ((value = 2) as data);
      ref   : access data = owner;

      ref = other;  -- ERROR: anonymous access reassignment after declaration

